--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.GitHubUser"
         tools:targetApi="31">
         <activity
+            android:name=".ui.SettingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.FavoriteUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.DetailUserActivity"
             android:exported="false" />
         <activity
